--- a/labApps/phoneCatalogueApp/css/custom.css
+++ b/labApps/phoneCatalogueApp/css/custom.css
@@ -1,1 +1,20 @@
+   body {
+      padding-top: 20px;
+    }
 
+    .phones {
+      list-style: none;
+    }
+
+    .thumb {
+      float: left;
+      margin: -0.5em 1em 1.5em 0;
+      padding-bottom: 1em;
+      height: 100px;
+      width: 100px;
+    }
+
+    .phones li {
+      height: 95px;
+      padding-top: 15px;
+    }
