added hacker news app week 5(continued)

--- a/labApps/hackerNewsApp/partials/posts.html
+++ b/labApps/hackerNewsApp/partials/posts.html
@@ -14,8 +14,8 @@
 		                       {{post.title}}
 		                     </span>
 		                    <span>
-		                        <a href="">Comments</a>
-		                    </span>
+						         <a href="#/posts/{{post.id}}/comments">Comments</a> // {{post.id}} not in lab tutorial 
+						    </span>
 		                </span>
 		            </div> 
 		       
