--- a/labApps/dBlogApp/partials/new-article.html
+++ b/labApps/dBlogApp/partials/new-article.html
@@ -14,10 +14,7 @@
 				          ng-model="newPost.text">
 				      </textarea>           
 		       </div>
-		        
-				    <button type="submit" class="btn btn-primary" 
-				           >
-		          Post</button>
+				    <button type="submit" class="btn btn-primary"> Post</button>
 	</form>
 </div>
 
