--- a/labApps/dBlogApp/partials/article.html
+++ b/labApps/dBlogApp/partials/article.html
@@ -1,13 +1,27 @@
-<div>
-	<ul class="list" > 
-	    <li class="background">
-	       
-	      	 <p><h3>{{article.title}}</h3> </p> 
-	         <p>   {{article.data}} </p>
-	         <p><h4>{{article.by}} </h4></p> 
-	       
-	         
-		</li>
+<div class="table table-striped">
+	<table class="table" >
+	    <thead>
+	       <tr>
+	        <th>
+	           <p><h3>{{article.title}}</h3> </p>
+	         </th>
+	      </tr>
+	    </thead>
+        <tbody>
+          <tr>
+            <td>
+              <blockquote>
+              	 <p> &nbsp;&nbsp;&nbsp; {{article.data }}</p>
+	      	  </blockquote>
+	        </td>
+	       </tr>
+	       <tr>
+	          <td>
+	            <small>by <cite>{{article.by}}</cite></small> <p class="pull-right">{{article.createdAt | date:"MM/dd/yyyy 'at' h:mma"}} </p>
+	         </td>
+	       </tr>
+	     </tbody>
+	  </table>
+</div>    
 
-	</ul>
-</div>
+ 
