--- a/labApps/dBlogApp/partials/blogs.html
+++ b/labApps/dBlogApp/partials/blogs.html
@@ -1,24 +1,31 @@
-<div>
-    <ul class="list">
-	<li class="background" dir-paginate="article in articles | filter:{title: query} | itemsPerPage: 2" on-last-repeat>
-		 
-      	<a href="#/article/{{article.id}}">
-         
-      	 <p><h3>{{article.title}}</h3> </p> </a>
-	     
-         <p> {{article.data | cut:true:350: ' ... '}} <a href="#/article/{{article.id}}"> (see more)</a> </p> 
+<div class="table table-striped"> 
+   <table class="table" dir-paginate="article in articles | orderBy: 'createdAt':true | filter:{title: query} | itemsPerPage: 2">
+     <thead>
+       <tr>
+        <th>
+           <a href="#/article/{{article.id}}"><p><h3>{{article.title}}</h3> </p> </a>
+        </th>
+      </tr>
+     </thead>
+     <tbody>
+          <tr>
+          <td>
+            <blockquote>
+             <p> &nbsp;&nbsp;&nbsp; {{article.data | cut:true:350: ' ... '}} <a href="#/article/{{article.id}}"> (see more)</a> </p> </blockquote>
+          </td>
+       </tr>
+       <tr>
+          <td>
+            <small>by <cite>{{article.by}}</cite></small> <p class="pull-right">{{article.createdAt | date:"MM/dd/yyyy 'at' h:mma"}} </p>
+         </td>
+       </tr>
+     </tbody>
+  </table>
+</div>    
 
-            <p><h4>{{article.by}} </h4></p> 
-            
-	 
-	</li>
-  <li class="background" ng-repeat="user in users" >
-     
-          <p><h4>{{user.user}} </h4></p>
-            <p><h4>{{user.pass}} </h4></p>
-   
-  </li>
-    </ul>	
+ 
+ 
+    
     <div ng-controller="OtherController" class="other-controller">
           <small>this is in "OtherController"</small>
           <div class="text-center">
