--- a/labApps/dBlogApp/partials/list-view.html
+++ b/labApps/dBlogApp/partials/list-view.html
@@ -3,7 +3,7 @@
                   <thead>
                     <th class="name" >Articles</th>
                   </thead>
-                  <tbody ng-repeat="article in articles">
+                  <tbody ng-repeat="article in articles | orderBy: '-createdAt':true">
                     <tr>
 			          <td><a href="#/article/{{article.id}}">{{article.title}} </a></td>
 					</tr>
